--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 d1nn3r
 cipher/cipher.js
 back2school
+cipher/perspective/style.css
+cipher/perspective/sketch.js
+cipher/perspective/p5.min.js
+cipher/perspective/p5.dom.min.js
+cipher/perspective/index.html
+cipher/perspective/Inconsolata.otf
+cipher/perspective.html
+cipher/index copy.html
+cipher/encrypted.html
+cipher/1730050654827.html
